# libxml2

./: .gitignore  .gitmodules  CONTRIBUTE.md  COPYING  Cargo.toml  README.md
xml2/: Cargo.toml
xml2-gen/: Cargo.toml
xml2-gen/src/: api.rs  cli.rs  main.rs
xml2-src/: Cargo.toml
xml2-src/src/: c_files.rs  configure.rs  lib.rs  makefile.rs
xml2-sys/: Cargo.toml  bindings.rs  build.rs  wrapper.h
xml2-sys/src/: lib.rs
xml2/examples/: gen.rs
