[package]
name = "xml2-gen"
categories = ["api-bindings", "encoding"]
publish = false

authors.workspace = true
version.workspace = true
keywords.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
quick-xml = { version = "0.28", features = ["encoding", "serialize"] }
inflections = "1.1.1"
tui = { version = "0.19", default-features = false, features = [
    "crossterm",
    "serde",
] }
