[package]
name = "xml2-src"
include = [
    "src/**",
    "vendor/libxml2-*/**/*.[ch]",
    "MIT-LICENSE",
]

authors.workspace = true
version.workspace = true
keywords.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
cc = "1.0.79"
dunce = "1.0.3"
