[package]
name = "xml2-src"
include = [
    "src/**",
    "vendor/libxml2/*.[ch]",
    "!vendor/libxml2/test*.[ch]",
    "!vendor/libxml2/trio*.[ch]",
    "vendor/libxml2/include/libxml/*.h",
    "vendor/libxml2/doc/libxml2-api.xml",
    "vendor/libxml2/config.h.cmake.in",
    "vendor/libxml2/configure.ac",
    "vendor/libxml2/Makefile.am",
    "MIT-LICENSE",
]

authors.workspace = true
version.workspace = true
keywords.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
cc = "1.0.79"
dunce = "1.0.3"
